--- a/kubernetes/datadog-agent.yaml
+++ b/kubernetes/datadog-agent.yaml
@@ -32,7 +32,7 @@ spec:
             valueFrom:
               secretKeyRef:
                 name: datadog-api
-                key: token
+                key: dd-api-key
           - name: DD_TAGS
             value: "env:memebook"
           - name: KUBERNETES
